--- a/Client/src/app/app.html
+++ b/Client/src/app/app.html
@@ -1,4 +1,4 @@
-<app-nav/> 
-<div [ngClass]="{'mt-24 container mx-auto': !(router.url === '/')}">
+<app-nav />
+<div [class.mt-24]="router.url !== '/'" [class.container]="router.url !== '/'" [class.mx-auto]="router.url !== '/'">
   <router-outlet />
 </div>
